[skip ci] Update project to latest tag verifica-firma-eidas-1.16.0